fix: fix horizontal scroll

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 #root {
   background-color: #0D0D0D;
+  overflow: hidden;
 }
 
 * {
